# hashkill

./: .gitignore  COPYING  CREDITS  Changelog  INSTALL  Makefile.in  README  README.md  aclocal.m4  adl.m4  config.h.in  configure  configure.ac  configure.scan  cracked.stat  curl.m4  general.m4  json.m4  libtool  oclopts.m4  opencl.m4  pathgen.m4  rebuild.sh  simd.m4
man/: Makefile  Makefile.am  Makefile.in  hashgen.8  hashkill.8  pcap2hcap.8
src/: Makefile.am  Makefile.in  aesni.c  base64.c  cpu-feat.c  cpu-feat.h  cpu-serpent.c  cpu-serpent.h  cpu-twofish.c  cpu-twofish.h  cracked.stat  des_nonstd_sse2.c  des_nonstd_xop.c  des_nonstd_xop.h  des_sse2.c  des_xop.c  err.h  hashgen-mangle.c  hashgen-mangle.h  hashgen.c  hashgen.h  hashinterface.c  hashinterface.h  libstatic.la  loadfiles.c  loadfiles.h  main.c  md4_sse2.c  md4_sse2.h  md4_xop.c  md4_xop.h  md5_sse2.c  md5_sse2.h  md5_xop.c  md5_xop.h  ocl-adl.c  ocl-adl.h  ocl-base.c  ocl-base.h  ocl-threads.c  (+89 more)
src/dict/: Makefile  common
src/kernels/: Makefile  amd_a51.cl  amd_androidfde.cl  amd_bfunix.cl  amd_desunix.cl  amd_desunix_long.cl  amd_django256.cl  amd_dmg.cl  amd_grub2.cl  amd_ipb2.cl  amd_ipb2_long.cl  amd_ipb2_short.cl  amd_keepass.cl  amd_keyring.cl  amd_kwallet.cl  amd_lastpass.cl  amd_lm.cl  amd_lm_long.cl  amd_lm_short.cl  amd_luks128.cl  amd_luks256.cl  amd_md4.cl  amd_md4_long.cl  amd_md4_short.cl  amd_md5.cl  amd_md5_long.cl  amd_md5_passsalt.cl  amd_md5_passsalt_long.cl  amd_md5_passsalt_short.cl  amd_md5_saltpass.cl  amd_md5_saltpass_long.cl  amd_md5_saltpass_short.cl  amd_md5_short.cl  amd_md5md5.cl  amd_md5md5_long.cl  amd_md5md5_short.cl  amd_md5unix.cl  amd_mozilla.cl  amd_mozilla_long.cl  amd_mscash.cl  (+209 more)
src/kernels/TODO/: amd_cl_markov.cl  amd_md4_markov.cl  amd_md5.cl  amd_md5_passsalt.cl  amd_md5_passsalt_markov.cl  amd_md5_passsalt_short.cl  amd_mscash2.cl  amd_mysql_old_markov.cl  amd_ntlm_markov.cl  amd_oracle_old_markov.cl  amd_oracle_old_short.cl  amd_sha1_markov.cl  amd_sha1_passsalt_markov.cl  amd_sha256_markov.cl  amd_sha512.cl  nvidia_md4_markov.cl  nvidia_md5_markov.cl  nvidia_md5md5_markov.cl  nvidia_mysql5_markov.cl  nvidia_mysql_old_markov.cl  nvidia_ntlm_markov.cl  nvidia_sha1_markov.cl  nvidia_sha256_markov.cl
src/kernels/compiler/: Makefile  amd-compiler.c  compiler.c  compiler.h  nvidia-compiler.c
src/lzma/: LzmaUtil.c  Threads.h  Types.h  lzma.c  lzma.h
src/markov/: Makefile  bulgarian.stat  english.stat  french.stat  german.stat  hotmail.stat  italian.stat  myspace.stat  phpbb.stat  rockyou.stat  unixpasswords.stat
src/markov-tools/: hotmail.stat  markov  markov.c  myspace.stat  phpbb.stat  test  test.stat
src/plugins/: Makefile  a51.c  androidfde.c  androidpin.c  apr1-crypt.c  apr1.c  bf-crypt.c  bfunix.c  bitcoin.c  desunix.c  django256.c  dmg.c  drupal7.c  grub2.c  ipb2.c  joomla.c  keepass.c  keyring.c  kwallet.c  lastpass.c  ldap-sha.c  ldap-ssha.c  lm.c  luks-helper.c  luks.c  md4.c  md5-crypt.c  md5-passsalt.c  md5-saltpass.c  md5.c  md5md5.c  md5unix.c  mediawiki.c  mozilla.c  mscash.c  mscash2.c  msoffice-old.c  msoffice.c  mssql-2000.c  mssql-2005.c  (+51 more)
src/rules/: Makefile  adaptive101  adaptive102  adaptive103  adaptive104  brute  brutestr  combine  dictionary  dictmarkov  dictnum  hybrid  leetifydict  markov  markovdict  markovstr  numdict  permutedict  strbrute  strmarkov  toggledict
src/tools/: Makefile  hashcpa.c  hashcpa.h  lastpass2hashkill  markovgen.c  pcap2hcap.c  rarcheck.c  zipcheck.c
tests/: 1.rar  10.rar  11.rar  12.rar  13.rar  14.rar  15.rar  2.rar  4.rar  5.rar  6.rar  7.rar  8.rar  9.rar  a.docx  apr1.hashes  b.docx  bfunix.hashes  c.docx  desunix.hashes  dict-1-15  dict_uu  id_rsa  image1  ipb2.hashes  ldap-sha.hashes  lm.hashes  md4.hashes  md5.hashes  md5md5.hashes  mysql5.hashes  nsldaps.hashes  ntlm.hashes  out.hcap  out1.hcap  output  pixmd5.hashes  rule_defcon  rule_num  rule_uu  (+7 more)
